--- a/main.html
+++ b/main.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        #square {
-            width: 50px;
-            height: 50px;
-            background-color: black;
-            position: absolute;
-            top: 100px;
-            left: 100px;
-        }
+      #square {
+        width: 50px;
+        height: 50px;
+        background-color: transparent;
+        background-image: url(/img/knight1-r.png);
+        background-size: cover;
+        position: absolute;
+        top: 100px;
+        left: 100px;
+        image-rendering: pixelated;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="square"></div>
     <script src="moving.js"></script>
-</body>
+  </body>
 </html>
