--- a/app/index.html
+++ b/app/index.html
@@ -52,11 +52,37 @@
         background-color: #555;
         border-color: black;
       }
+      #hud{
+        position:absolute;
+        top:10px;
+        left:10px;
+        background: rgba(255,255,255,0.8);
+        padding:6px 10px;
+        border:1px solid #333;
+        border-radius:6px;
+        z-index: 2;
+        font-family: Arial, sans-serif;
+      }
+
+      #treasure{
+        width: 32px;
+        height: 32px;
+        position: absolute;
+        background-image: url(/img/coin.png); /* możesz podmienić */
+        background-size: cover;
+        image-rendering: pixelated;
+        z-index: 1;
+      }
+
+      .hidden{ display:none; }
+
     </style>
   </head>
 
   <body>
     <div id="container">
+      <div id="hud">Skarby: <span id="score">0</span></div>
+      <div id="treasure" class="hidden"></div>
       <div id="square"></div>
       <div id="start-button">Start</div>
     </div>
