--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ruchomy Kwadrat w Ramce</title>
+    <title>Pixel Przygoda</title>
     <style>
       #container {
         width: calc(100vw - 60px);
@@ -29,15 +29,14 @@
       }
 
       #start-button {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 20px 40px;
+        position: static;
+        transform: none;
+        display: inline-block;
+        padding: 12px 26px;
         background-color: lightgray;
         border: 2px solid gray;
-        border-radius: 5px;
-        font-size: 24px;
+        border-radius: 8px;
+        font-size: 20px;
         cursor: default;
         user-select: none;
         transition: background-color 0.2s ease, border-color 0.2s ease;
@@ -52,40 +51,220 @@
         background-color: #555;
         border-color: black;
       }
-      #hud{
-        position:absolute;
-        top:10px;
-        left:10px;
-        background: rgba(255,255,255,0.8);
-        padding:6px 10px;
-        border:1px solid #333;
-        border-radius:6px;
-        z-index: 2;
+
+      /* HUD */
+      #hud {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        right: 10px;
+        height: 44px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+
+        background: rgba(255, 255, 255, 0.85);
+        border: 1px solid #333;
+        border-radius: 10px;
+        padding: 6px 10px;
+        z-index: 4;
         font-family: Arial, sans-serif;
+        user-select: none;
       }
+
+      .hud-left,
+      .hud-center,
+      .hud-right {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .hud-center {
+        justify-content: center;
+        flex: 1;
+        font-size: 22px;
+      }
+
+      .hud-right button {
+        width: 36px;
+        height: 32px;
+        border: 1px solid #333;
+        background: rgba(240, 240, 240, 0.95);
+        border-radius: 8px;
+        cursor: pointer;
+      }
+
+      .hud-right button:active {
+        transform: translateY(1px);
+      }
+
 
       #treasure{
         width: 32px;
         height: 32px;
         position: absolute;
-        background-image: url(/img/coin.png); /* możesz podmienić */
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
         image-rendering: pixelated;
         z-index: 1;
       }
 
       .hidden{ display:none; }
+      .invisible { visibility: hidden; }
+
+      #enemy{
+        width: 48px;               /* 24px * 2 (skala x2) */
+        height: 48px;              /* 24px * 2 */
+        position: absolute;
+
+        background-image: url(/img/slime_green.png);
+        background-repeat: no-repeat;
+
+        /* sprite-sheet ma 4 kolumny i 3 wiersze:
+         więc rozmiar tła = 4x szerokość elementu i 3x wysokość elementu */
+        background-size: 400% 300%;
+
+        image-rendering: pixelated;
+        z-index: 1;
+      }
+
+      /* animacja: przesuwamy X po 4 klatkach (0..3) */
+      #enemy.anim {
+        animation: enemyWalk 0.6s steps(4) infinite;
+      }
+
+      @keyframes enemyWalk {
+        from { background-position-x: 0%; }
+        to   { background-position-x: -300%; } /* 4 klatki => 0, -100, -200, -300 */
+      }
+
+      /* wybór wiersza (Y): 0%, -100%, -200% */
+      #enemy.row0 { background-position-y: 0%; }
+      #enemy.row1 { background-position-y: -100%; }
+      #enemy.row2 { background-position-y: -200%; }
+
+      /* proste "mruganie" gdy dostaniesz hita */
+      #square.hurt {
+        animation: hurtBlink 0.9s steps(2, end) infinite;
+      }
+
+      @keyframes hurtBlink {
+        0% { opacity: 1; }
+        50% { opacity: 0.2; }
+        100% { opacity: 1; }
+      }
+
+      /* Overlay (menu / game over) */
+      .overlay {
+        position: absolute;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 5;
+        background: rgba(0, 0, 0, 0.35);
+      }
+
+      .overlay.hidden { display: none; }
+
+      .overlay-box {
+        background: rgba(255, 255, 255, 0.95);
+        border: 2px solid #222;
+        border-radius: 14px;
+        padding: 18px 22px;
+        text-align: center;
+        min-width: 280px;
+      }
+
+      .overlay-title {
+        font-size: 22px;
+        font-weight: 700;
+        margin-bottom: 8px;
+      }
+
+      .overlay-text {
+        font-size: 14px;
+        margin-bottom: 10px;
+      }
+
+      .overlay-hint {
+        font-size: 12px;
+        opacity: 0.8;
+        margin-bottom: 12px;
+      }
+
+      /* animacja skarbu przy zebraniu */
+      @keyframes pop {
+        0%   { transform: scale(1);   opacity: 1;   filter: brightness(1); }
+        40%  { transform: scale(1.35); opacity: 1;  filter: brightness(2); }
+        100% { transform: scale(0.6); opacity: 0;   filter: brightness(3); }
+      }
+
+      #treasure.pop {
+        animation: pop 180ms ease-out;
+      }
+
+      #flash {
+        position: absolute;
+        inset: 0;
+        background: rgba(255, 255, 255, 0.35);
+        opacity: 0;
+        pointer-events: none;
+        z-index: 3;
+      }
+
+      #flash.on {
+        opacity: 1;
+        transition: opacity 60ms ease;
+      }
+
 
     </style>
   </head>
 
   <body>
     <div id="container">
-      <div id="hud">Skarby: <span id="score">0</span></div>
+      <div id="flash"></div>
+
+      <!-- HUD -->
+      <div id="hud">
+        <div class="hud-left">
+          <span class="label">Skarby:</span> <span id="score">0</span>
+        </div>
+
+        <div class="hud-center" aria-label="Lives">
+          <span id="lives" title="Życie">❤️❤️❤️</span>
+        </div>
+
+        <div class="hud-right">
+          <button id="restart-btn" type="button" title="Restart">⟲</button>
+          <button id="mute-btn" type="button" title="Mute">🔇</button>
+	</div>
+      </div>
+
+      <!-- elementy gry -->
       <div id="treasure" class="hidden"></div>
+      <div id="enemy" class="invisible"></div>
       <div id="square"></div>
-      <div id="start-button">Start</div>
+
+      <!-- Overlay na start/game over -->
+      <div id="overlay" class="overlay">
+	<div class="overlay-box">
+	  <div id="overlay-title" class="overlay-title">Rycerz i Skarby</div>
+	  <div id="overlay-text" class="overlay-text">
+            Najedź rycerzem na START i wciśnij Enter.
+          </div>
+          <div class="overlay-hint">Enter = start / restart • M = mute</div>
+          <div id="start-button">Start</div>
+        </div>
+      </div>
     </div>
-    <script src="moving.js"></script>
+
+    <audio id="bgm" src="/audio/bgm.mp3" loop preload="auto"></audio>
+    <script type="module" src="./src/main.js"></script>
+
   </body>
 </html>
