--- a/app/index.html
+++ b/app/index.html
@@ -95,26 +95,6 @@
       }
 
       /* HUD */
-      #hud {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        right: 10px;
-        height: 44px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 10px;
-
-        background: rgba(255, 255, 255, 0.85);
-        border: 1px solid #333;
-        border-radius: 10px;
-        padding: 6px 10px;
-        z-index: 4;
-        font-family: Arial, sans-serif;
-        user-select: none;
-      }
-
       .hud-left,
       .hud-center,
       .hud-right {
@@ -140,6 +120,97 @@
 
       .hud-right button:active {
         transform: translateY(1px);
+      }
+
+      /* HUD — scroll skin */
+      #hud {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        right: 10px;
+
+        /* ✅ sprite dimensions */
+        --hud-scale: 2;
+        --hud-src-h: 29px;
+        --hud-src-cap: 14px;
+        --hud-src-mid: 17px;
+
+        --hud-h: calc(var(--hud-src-h) * var(--hud-scale));
+        --hud-cap: calc(var(--hud-src-cap) * var(--hud-scale));
+        --hud-mid: calc(var(--hud-src-mid) * var(--hud-scale));
+
+        height: var(--hud-h);
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+
+        /* ✅ repeat only the mid slice */
+        background-image: url("./img/ui/hud_mid1.png");
+        background-repeat: repeat-x;
+        background-size: var(--hud-mid) var(--hud-h);
+
+        background-position: 0 -5px;
+        background-origin: content-box;
+        background-clip: content-box;
+
+        /* ✅ content must sit inside caps */
+        padding: 6px var(--hud-cap);
+
+        z-index: 4;
+        border: none;
+        border-radius: 0;
+        background-color: transparent;
+
+        overflow: hidden; /* ✅ safety: nic nie wystaje spod capów */
+        image-rendering: pixelated;
+        image-rendering: crisp-edges;
+        user-select: none;
+
+        font-family: Arial, sans-serif;
+      }
+
+      .hud-left {
+        margin-left: 10px;
+      }
+      .hud-right {
+        margin-right: 10px;
+      }
+
+      /* lewy cap */
+      #hud::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: var(--hud-cap);
+        height: var(--hud-h);
+        background-image: url("./img/ui/hud_left1.png");
+        background-repeat: no-repeat;
+        background-size: var(--hud-cap) var(--hud-h);
+        image-rendering: pixelated;
+        pointer-events: none;
+      }
+
+      /* prawy cap */
+      #hud::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: var(--hud-cap);
+        height: var(--hud-h);
+        background-image: url("./img/ui/hud_right1.png");
+        background-repeat: no-repeat;
+        background-size: var(--hud-cap) var(--hud-h);
+        image-rendering: pixelated;
+        pointer-events: none;
+      }
+
+      #hud > * {
+        position: relative;
+        z-index: 1;
       }
 
       #treasure {
@@ -314,6 +385,36 @@
       .shake {
         animation: shake 180ms linear;
       }
+
+      #credits {
+        position: fixed;
+        right: 10px;
+        bottom: 8px;
+        z-index: 9999;
+
+        font-family:
+          ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+          "Liberation Mono", "Courier New", monospace;
+        font-size: 12px;
+        letter-spacing: 0.2px;
+        color: rgba(255, 255, 255, 0.9);
+
+        padding: 6px 10px;
+        border-radius: 10px;
+        background: rgba(0, 0, 0, 0.35);
+        border: 1px solid rgba(255, 255, 255, 0.15);
+
+        user-select: none;
+        pointer-events: none;
+
+        image-rendering: pixelated;
+        image-rendering: crisp-edges;
+        text-shadow: 0 1px 0 rgba(0, 0, 0, 0.7);
+      }
+
+      #credits .heart {
+        filter: drop-shadow(0 1px 0 rgba(0, 0, 0, 0.7));
+      }
     </style>
   </head>
 
@@ -353,6 +454,10 @@
           <div id="start-button">Start</div>
         </div>
       </div>
+    </div>
+
+    <div id="credits" aria-label="Credits">
+      Made with <span class="heart">❤️</span> by Janek i Julek Kozłowscy
     </div>
 
     <audio id="bgm" src="/audio/bgm.mp3" loop preload="auto"></audio>
