--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ruchomy Kwadrat w Ramce</title>
+    <title>Pixel Przygoda</title>
     <style>
+      html,
+      body {
+        height: 100%;
+      }
+
+      body {
+        overflow: hidden; /* ✅ blokuje scroll */
+        margin: 0;
+
+        /* Step 1: tło strony = powtarzające się leśne kafelki */
+        background-image: url("./img/ui/forest_tile.png");
+        background-repeat: repeat;
+        background-position: top left;
+        background-size: 32px 32px;
+
+        /* Pixel art bez rozmycia */
+        image-rendering: pixelated;
+        image-rendering: crisp-edges;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
       #container {
         width: calc(100vw - 60px);
         height: calc(100vh - 60px);
-        border: 2px solid black;
+
         position: relative;
         margin: 20px;
         overflow: hidden;
+
+        box-sizing: border-box;
+
+        /* --- Step 2: arena frame (9-slice z 48x48, slice=16) --- */
+        border: 32px solid transparent; /* grubość ramki = 16px */
+        border-image-source: url("./img/ui/arena_frame2.png");
+        border-image-slice: 16; /* rogi 16x16 */
+        border-image-repeat: round; /* krawędzie się ładnie powielą */
+
+        /* --- Step 2: pole gry = powielane klepisko --- */
+        background-image: url("./img/ui/dirt_tile.png");
+        background-repeat: repeat;
+        background-position: top left;
+
+        image-rendering: pixelated;
+        image-rendering: crisp-edges;
       }
 
       #square {
@@ -29,18 +69,19 @@
       }
 
       #start-button {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 20px 40px;
+        position: static;
+        transform: none;
+        display: inline-block;
+        padding: 12px 26px;
         background-color: lightgray;
         border: 2px solid gray;
-        border-radius: 5px;
-        font-size: 24px;
+        border-radius: 8px;
+        font-size: 20px;
         cursor: default;
         user-select: none;
-        transition: background-color 0.2s ease, border-color 0.2s ease;
+        transition:
+          background-color 0.2s ease,
+          border-color 0.2s ease;
       }
 
       #start-button.active {
@@ -52,40 +93,374 @@
         background-color: #555;
         border-color: black;
       }
-      #hud{
-        position:absolute;
-        top:10px;
-        left:10px;
-        background: rgba(255,255,255,0.8);
-        padding:6px 10px;
-        border:1px solid #333;
-        border-radius:6px;
-        z-index: 2;
+
+      /* HUD */
+      .hud-left,
+      .hud-center,
+      .hud-right {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .hud-center {
+        justify-content: center;
+        flex: 1;
+        font-size: 22px;
+      }
+
+      .hud-right button {
+        width: 36px;
+        height: 32px;
+        border: 1px solid #333;
+        background: rgba(240, 240, 240, 0.95);
+        border-radius: 8px;
+        cursor: pointer;
+      }
+
+      .hud-right button:active {
+        transform: translateY(1px);
+      }
+
+      /* HUD — scroll skin */
+      #hud {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        right: 10px;
+
+        /* ✅ sprite dimensions */
+        --hud-scale: 2;
+        --hud-src-h: 29px;
+        --hud-src-cap: 14px;
+        --hud-src-mid: 17px;
+
+        --hud-h: calc(var(--hud-src-h) * var(--hud-scale));
+        --hud-cap: calc(var(--hud-src-cap) * var(--hud-scale));
+        --hud-mid: calc(var(--hud-src-mid) * var(--hud-scale));
+
+        height: var(--hud-h);
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+
+        /* ✅ repeat only the mid slice */
+        background-image: url("./img/ui/hud_mid1.png");
+        background-repeat: repeat-x;
+        background-size: var(--hud-mid) var(--hud-h);
+
+        background-position: 0 -5px;
+        background-origin: content-box;
+        background-clip: content-box;
+
+        /* ✅ content must sit inside caps */
+        padding: 6px var(--hud-cap);
+
+        z-index: 4;
+        border: none;
+        border-radius: 0;
+        background-color: transparent;
+
+        overflow: hidden; /* ✅ safety: nic nie wystaje spod capów */
+        image-rendering: pixelated;
+        image-rendering: crisp-edges;
+        user-select: none;
+
         font-family: Arial, sans-serif;
       }
 
-      #treasure{
+      .hud-left {
+        margin-left: 10px;
+      }
+      .hud-right {
+        margin-right: 10px;
+      }
+
+      /* lewy cap */
+      #hud::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: var(--hud-cap);
+        height: var(--hud-h);
+        background-image: url("./img/ui/hud_left1.png");
+        background-repeat: no-repeat;
+        background-size: var(--hud-cap) var(--hud-h);
+        image-rendering: pixelated;
+        pointer-events: none;
+      }
+
+      /* prawy cap */
+      #hud::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: var(--hud-cap);
+        height: var(--hud-h);
+        background-image: url("./img/ui/hud_right1.png");
+        background-repeat: no-repeat;
+        background-size: var(--hud-cap) var(--hud-h);
+        image-rendering: pixelated;
+        pointer-events: none;
+      }
+
+      #hud > * {
+        position: relative;
+        z-index: 1;
+      }
+
+      #treasure {
         width: 32px;
         height: 32px;
         position: absolute;
-        background-image: url(/img/coin.png); /* możesz podmienić */
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
         image-rendering: pixelated;
         z-index: 1;
       }
 
-      .hidden{ display:none; }
+      .hidden {
+        display: none;
+      }
+      .invisible {
+        visibility: hidden;
+      }
 
+      #enemy {
+        width: 48px; /* 24px * 2 (skala x2) */
+        height: 48px; /* 24px * 2 */
+        position: absolute;
+
+        background-image: url(/img/slime_green.png);
+        background-repeat: no-repeat;
+        background-size: 400% 300%;
+
+        image-rendering: pixelated;
+        z-index: 1;
+      }
+
+      #enemy.anim {
+        animation: enemyWalk 0.6s steps(4) infinite;
+      }
+
+      @keyframes enemyWalk {
+        from {
+          background-position-x: 0%;
+        }
+        to {
+          background-position-x: -300%;
+        }
+      }
+
+      /* wybór wiersza (Y): 0%, -100%, -200% */
+      #enemy.row0 {
+        background-position-y: 0%;
+      }
+      #enemy.row1 {
+        background-position-y: -100%;
+      }
+      #enemy.row2 {
+        background-position-y: -200%;
+      }
+
+      /* proste "mruganie" gdy dostaniesz hita */
+      #square.hurt {
+        animation: hurtBlink 0.9s steps(2, end) infinite;
+      }
+
+      @keyframes hurtBlink {
+        0% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0.2;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+
+      .overlay {
+        position: absolute;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 5;
+        background: rgba(0, 0, 0, 0.35);
+      }
+
+      .overlay.hidden {
+        display: none;
+      }
+
+      .overlay-box {
+        background: rgba(255, 255, 255, 0.95);
+        border: 2px solid #222;
+        border-radius: 14px;
+        padding: 18px 22px;
+        text-align: center;
+        min-width: 280px;
+      }
+
+      .overlay-title {
+        font-size: 22px;
+        font-weight: 700;
+        margin-bottom: 8px;
+      }
+
+      .overlay-text {
+        font-size: 14px;
+        margin-bottom: 10px;
+      }
+
+      .overlay-hint {
+        font-size: 12px;
+        opacity: 0.8;
+        margin-bottom: 12px;
+      }
+
+      @keyframes pop {
+        0% {
+          transform: scale(1);
+          opacity: 1;
+          filter: brightness(1);
+        }
+        40% {
+          transform: scale(1.35);
+          opacity: 1;
+          filter: brightness(2);
+        }
+        100% {
+          transform: scale(0.6);
+          opacity: 0;
+          filter: brightness(3);
+        }
+      }
+
+      #treasure.pop {
+        animation: pop 180ms ease-out;
+      }
+
+      #flash {
+        position: absolute;
+        inset: 0;
+        background: rgba(255, 255, 255, 0.35);
+        opacity: 0;
+        pointer-events: none;
+        z-index: 3;
+      }
+
+      #flash.on {
+        opacity: 1;
+        transition: opacity 60ms ease;
+      }
+
+      @keyframes shake {
+        0% {
+          transform: translate(0, 0);
+        }
+        20% {
+          transform: translate(-6px, 4px);
+        }
+        40% {
+          transform: translate(5px, -3px);
+        }
+        60% {
+          transform: translate(-4px, -5px);
+        }
+        80% {
+          transform: translate(6px, 3px);
+        }
+        100% {
+          transform: translate(0, 0);
+        }
+      }
+
+      .shake {
+        animation: shake 180ms linear;
+      }
+
+      #credits {
+        position: fixed;
+        right: 10px;
+        bottom: 8px;
+        z-index: 9999;
+
+        font-family:
+          ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+          "Liberation Mono", "Courier New", monospace;
+        font-size: 12px;
+        letter-spacing: 0.2px;
+        color: rgba(255, 255, 255, 0.9);
+
+        padding: 6px 10px;
+        border-radius: 10px;
+        background: rgba(0, 0, 0, 0.35);
+        border: 1px solid rgba(255, 255, 255, 0.15);
+
+        user-select: none;
+        pointer-events: none;
+
+        image-rendering: pixelated;
+        image-rendering: crisp-edges;
+        text-shadow: 0 1px 0 rgba(0, 0, 0, 0.7);
+      }
+
+      #credits .heart {
+        filter: drop-shadow(0 1px 0 rgba(0, 0, 0, 0.7));
+      }
     </style>
   </head>
 
   <body>
     <div id="container">
-      <div id="hud">Skarby: <span id="score">0</span></div>
+      <div id="flash"></div>
+
+      <!-- HUD -->
+      <div id="hud">
+        <div class="hud-left">
+          <span class="label">Skarby:</span> <span id="score">0</span>
+        </div>
+
+        <div class="hud-center" aria-label="Lives">
+          <span id="lives" title="Życie">❤️❤️❤️</span>
+        </div>
+
+        <div class="hud-right">
+          <button id="restart-btn" type="button" title="Restart">⟲</button>
+          <button id="mute-btn" type="button" title="Mute">🔇</button>
+        </div>
+      </div>
+
+      <!-- elementy gry -->
       <div id="treasure" class="hidden"></div>
+      <div id="enemy" class="invisible"></div>
       <div id="square"></div>
-      <div id="start-button">Start</div>
+
+      <!-- Overlay na start/game over -->
+      <div id="overlay" class="overlay">
+        <div class="overlay-box">
+          <div id="overlay-title" class="overlay-title">Pixel Przygoda</div>
+          <div id="overlay-text" class="overlay-text">
+            Najedź rycerzem na START i wciśnij Enter.
+          </div>
+          <div class="overlay-hint">Enter = start / restart • M = mute</div>
+          <div id="start-button">Start</div>
+        </div>
+      </div>
     </div>
-    <script src="moving.js"></script>
+
+    <div id="credits" aria-label="Credits">
+      Made with <span class="heart">❤️</span> by Janek i Julek Kozłowscy
+    </div>
+
+    <audio id="bgm" src="/audio/bgm.mp3" loop preload="auto"></audio>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
